--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -22,7 +22,7 @@
         <label asp-for="customers.Pincode">Indsæt kode her:</label>
         <input type="password" asp-for="customers.Pincode" class="form-control small-input" maxlength="4" style="text-align: center;" />
         <span class="text-danger" asp-validation-for="customers.Pincode"></span></br>
-        <input type="submit" class="btn btn-primary" value="Oplev" />
+        <input type="submit" style="color: black; background-color: #B28228; border-color: #B28228;" class="btn btn-primary" value="Oplev" />
     </form>
 </div>
 
