--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,6 +19,7 @@ html {
 
 body {
     margin-bottom: 145px;
+    font-family: 'Times New Roman', sans-serif;
 }
 
 .accordion-button{
@@ -66,7 +67,7 @@ body {
 }
 
 .input-box{
-    
+    font-family: 'Times New Roman';
 }
 
 .form-control small-input{
@@ -79,4 +80,12 @@ body {
 input::placeholder{
     color: black;
     opacity: 1;
+}
+.gray-box {
+    background-color: rgba(128, 128, 128, 0.6);
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
