--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Liste over alle udstillinger";
 }
 <header>
-    <h1 align="center" style="font-family: 'Times New Roman'">@ViewData["Title"]</h1>
+    <h1 align="center" style="font-family: 'Times New Roman'; font-style:italic;">@ViewData["Title"]</h1><br />
 </header>
 
 <div class="container">
@@ -26,8 +26,7 @@
 </div>
 
 <div style="position: relative;">
-    <a href="/MuseTales/AdminDash" class="btn btn-primary btn-lg btn-block" style="display: inline-block;">Admin kontrolpanel</a>
-    <form method="post" style="display: inline-block; position: absolute; bottom: 0; right: 0;">
+    <form method="post" style="display: inline-block; position: relative; bottom: 0; right: 0;">
         <input type="hidden" name="qrcode" asp-for="@Model.QRCodeImage" />
             <a href="https://museumragnarock.dk/">
         <img src="~/Images/adobe-express-qr-code.png" style="width: 50px; height: 50px;"/>
