--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -89,3 +89,9 @@ input::placeholder{
     flex-direction: column;
     align-items: center;
 }
+.text-danger {
+    color: red;
+    position: absolute;
+    margin-top: 150px;
+}
+
