--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,20 +7,34 @@
 }
 
 <div class="container">
-
     <div class="container-front">
-    <img src="~/Images/RagnarockFront.png" style="width:100%"/>
-    <div class="bottom-center">
+        <img src="~/Images/RagnarockFront.png" style="width:100%" />
+        <div class="bottom-center">
             <form method="post" class="input-box" style="text-align: center; display: flex; flex-direction: column; align-items: center;">
-                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-                <label asp-for="customers.Pincode" style="text-shadow: 0 0 3px black, 0 0 5px black">Indtast kode her:</label>
-                <input type="password" asp-for="customers.Pincode" placeholder="Indtast kode her" class="form-control small-input" maxlength="4" style="text-align: center; font-size: 11px; />
-                <span class="text-danger" asp-validation-for="customers.Pincode"></span></br>
-                <input type="submit" style="color: black; background-color: #B28228; border-color: #B28228;" class="btn btn-primary" value="Oplev" />
+                <div class="text-danger popup-message-box" asp-validation-summary="ModelOnly" style="display: none;"></div>
+                <div class="gray-box">
+                    <label asp-for="customers.Pincode" style="text-shadow: 0 0 3px black, 0 0 5px black">Indtast kode her:</label>
+                    <input type="password" asp-for="customers.Pincode" placeholder="Indtast kode her" class="form-control small-input" maxlength="4" style="text-align: center; font-size: 11px;" />
+                    <span class="text-danger" asp-validation-for="customers.Pincode"></span></br>
+                    <input type="submit" style="color: black; background-color: #B28228; border-color: #B28228; font-family: 'Times New Roman';" class="btn btn-primary" value="Oplev" />
+                </div>
             </form>
-    </div>
+        </div>
     </div>
 </div>
+
+<!-- Popup Modal -->
+<div id="validationPopup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <div class="popup-body">
+            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        </div>
+    </div>
+</div>
+
+
+
 
 <div class="text-box" style="font-size: 14px; margin-top: 50px; font-family: 'Times New Roman', Times, serif">
     <p>
@@ -61,6 +75,5 @@
         width: 120px;
         color: black;
     }
-
 </style>
 
