--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -13,7 +13,7 @@
             <form method="post" class="input-box" style="text-align: center; display: flex; flex-direction: column; align-items: center;">
                 <div class="text-danger popup-message-box" asp-validation-summary="ModelOnly" style="display: none;"></div>
                 <div class="gray-box">
-                    <label asp-for="customers.Pincode" style="text-shadow: 0 0 3px black, 0 0 5px black">Indtast kode her:</label>
+                    <label asp-for="customers.Pincode" style="text-shadow: 0 0 3px black, 0 0 5px black">Billetkode</label>
                     <input type="password" asp-for="customers.Pincode" placeholder="Indtast kode her" class="form-control small-input" maxlength="4" style="text-align: center; font-size: 11px;" />
                     <span class="text-danger" asp-validation-for="customers.Pincode"></span></br>
                     <input type="submit" style="color: black; background-color: #B28228; border-color: #B28228; font-family: 'Times New Roman';" class="btn btn-primary" value="Oplev" />
