--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index"><img class="img-fluid" src="~/Images/RagnarockLogo.png" width="150" height="auto" /></a>
+                <a class="navbar-brand" asp-area="" asp-page="/MuseTales/ExpoList"><img class="img-fluid" src="~/Images/RagnarockLogo.png" width="150" height="auto" /></a>
             </div>
         </nav>
     </header>
